- fixed fluid translation issue (#89)
- added config to disable taking damage in rockets (#199)
- fixed water not freezing despite being cold enough (#228)
- fixed issues with vents (#231)

- diesel and biodiesel from other mods can now be used as fuel.