@@ -46,5 +46,6 @@ public class AdAstra {
 
     public static void postInit() {
         PlatformUtils.registerStrippedLog(ModBlocks.GLACIAN_LOG.get(), ModBlocks.STRIPPED_GLACIAN_LOG.get());
+        ModEntityTypes.registerSpawnPlacements();
     }
 }
