@@ -22,6 +22,8 @@ import net.minecraft.world.inventory.AbstractContainerMenu;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.state.properties.BlockStateProperties;
+import net.minecraft.world.level.chunk.LevelChunk;
 import net.minecraft.world.level.material.FluidState;
 import net.minecraft.world.level.material.Fluids;
 import net.minecraft.world.level.material.WaterFluid;
@@ -57,8 +59,10 @@ public class WaterPumpBlockEntity extends AbstractMachineBlockEntity implements 
 
     @Override
     public void tick() {
-        if (!this.getLevel().isClientSide()) {
-            FluidState water = this.level.getFluidState(this.getBlockPos().below());
+        if (level == null) return;
+        if (!level.isClientSide()) {
+            BlockPos below = this.getBlockPos().below();
+            FluidState water = this.level.getFluidState(below);
             if (getFluidContainer().getFluids().get(0).getFluidAmount() < getFluidContainer().getTankCapacity(0)) {
                 if (water.getType() instanceof WaterFluid.Source) {
 
@@ -76,9 +80,14 @@ public class WaterPumpBlockEntity extends AbstractMachineBlockEntity implements 
 
                     if (WaterPumpConfig.deleteWaterBelowWaterPump) {
                         // Delete the water block after it has been fully extracted.
-                        if (waterExtracted >= FluidHooks.buckets(1)) {
+                        if (waterExtracted >= FluidHooks.buckets(1f)) {
                             waterExtracted = 0;
-                            level.setBlockAndUpdate(this.getBlockPos().below(), Blocks.AIR.defaultBlockState());
+                            BlockState blockState = level.getBlockState(below);
+                            if (blockState.hasProperty(BlockStateProperties.WATERLOGGED)) {
+                                level.setBlockAndUpdate(below, blockState.setValue(BlockStateProperties.WATERLOGGED, false));
+                            } else {
+                                level.setBlockAndUpdate(below, Blocks.AIR.defaultBlockState());
+                            }
                         }
                     }
                 }
@@ -88,7 +97,7 @@ public class WaterPumpBlockEntity extends AbstractMachineBlockEntity implements 
 
             // Insert the fluid into nearby tanks.
             if (this.getEnergyStorage().internalExtract(this.getEnergyPerTick(), true) > 0 && !getFluidContainer().isEmpty()) {
-                for (Direction direction : new Direction[]{Direction.UP, this.getBlockState().getValue(AbstractMachineBlock.FACING)}) {
+                for (Direction direction : Direction.values()) {
                     FluidHolder fluid = FluidHooks.newFluidHolder(getFluidContainer().getFluids().get(0).getFluid(), WaterPumpConfig.transferPerTick * 2, getFluidContainer().getFluids().get(0).getCompound());
                     this.getEnergyStorage().internalExtract(this.getEnergyPerTick(), false);
                     if (FluidHooks.moveBlockToBlockFluid(this, direction.getOpposite(), level.getBlockEntity(worldPosition.relative(direction)), direction, fluid) > 0) {
