@@ -2,6 +2,7 @@ package earth.terrarium.ad_astra.common.compat.jei.category;
 
 import com.mojang.blaze3d.vertex.PoseStack;
 import earth.terrarium.ad_astra.AdAstra;
+import earth.terrarium.ad_astra.client.ClientPlatformUtils;
 import earth.terrarium.ad_astra.client.screen.GuiUtil;
 import earth.terrarium.ad_astra.common.registry.ModItems;
 import earth.terrarium.ad_astra.common.compat.jei.EnergyBarDrawable;
@@ -69,7 +70,7 @@ public class CryoFuelConversionCategory extends BaseCategory<CryoFuelConversionR
             tooltips.add(Component.translatable("rei.tooltip.ad_astra.energy_using", CryoFreezerConfig.energyPerTick));
         }
         if (mouseX > 80 && mouseY > 13 && mouseX < 80 + GuiUtil.FLUID_TANK_WIDTH && mouseY < 13 + GuiUtil.FLUID_TANK_HEIGHT) {
-            tooltips.add(GuiUtil.getFluidTranslation(recipe.getFluidOutput()));
+            tooltips.add(ClientPlatformUtils.getFluidTranslation(recipe.getFluidOutput()));
         }
         return tooltips;
     }
