@@ -2,14 +2,21 @@ package earth.terrarium.ad_astra.client.fabric;
 
 import earth.terrarium.ad_astra.client.ClientPlatformUtils;
 import net.fabricmc.fabric.api.client.model.BakedModelManagerHelper;
+import net.fabricmc.fabric.api.transfer.v1.fluid.FluidVariant;
+import net.fabricmc.fabric.api.transfer.v1.fluid.FluidVariantAttributes;
+import net.minecraft.ChatFormatting;
 import net.minecraft.client.gui.screens.MenuScreens;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.client.gui.screens.inventory.MenuAccess;
 import net.minecraft.client.resources.model.BakedModel;
 import net.minecraft.client.resources.model.ModelManager;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.Style;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.inventory.AbstractContainerMenu;
 import net.minecraft.world.inventory.MenuType;
+import net.minecraft.world.level.material.Fluid;
+import net.minecraft.world.level.material.Fluids;
 
 public class ClientPlatformUtilsImpl {
     public static BakedModel getModel(ModelManager dispatcher, ResourceLocation id) {
@@ -18,5 +25,12 @@ public class ClientPlatformUtilsImpl {
 
     public static <M extends AbstractContainerMenu, U extends Screen & MenuAccess<M>> void registerScreen(MenuType<? extends M> type, ClientPlatformUtils.ScreenConstructor<M, U> factory) {
         MenuScreens.register(type, factory::create);
+    }
+
+    public static Component getFluidTranslation(Fluid fluid) {
+        if (fluid == Fluids.EMPTY) {
+            return Component.translatable("item.ad_astra.empty_tank").setStyle(Style.EMPTY.withColor(ChatFormatting.AQUA));
+        }
+        return FluidVariantAttributes.getName(FluidVariant.of(fluid));
     }
 }
